--- a/src/style.css
+++ b/src/style.css
@@ -117,3 +117,34 @@ nav input[type=checkbox]:checked ~ ul {
 #taskViewer input[type=checkbox]:checked ~ * {
     color: red;
 }
+
+#popUpOverLay {
+    display: flex;
+    position: fixed;
+    z-index: 2;
+      
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+
+    background-color: rgba(0, 0, 0, 0.4);
+
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#taskForm {
+    background-color: aliceblue;
+
+    /* width: 200px; */
+    /* height: 100px; */
+
+    padding: 10px;
+}
+
+.newTaskInput {
+    display: block;
+    margin: 5px;
+}
