--- a/src/style.css
+++ b/src/style.css
@@ -43,11 +43,9 @@ main > * {
 
 /* SIDEBAR */
 
-/* 
-nav input[type=checkbox]:checked ~ ul {
-    display: none;
-} 
-*/
+h3 {
+    margin-bottom: 4%;
+}
 
 #sidebar input[type=checkbox]:checked ~ ul,
 #sidebar input[type=checkbox]:checked ~ button {
@@ -137,9 +135,7 @@ nav input[type=checkbox]:checked ~ ul {
 
 #taskForm {
     background-color: aliceblue;
-
-    /* width: 200px; */
-    /* height: 100px; */
+    border-radius: 3px;
 
     padding: 10px;
 }
@@ -148,3 +144,27 @@ nav input[type=checkbox]:checked ~ ul {
     display: block;
     margin: 5px;
 }
+
+.close {
+    position: relative;
+    right: -200px;
+    top: 10px; 
+    opacity: 0.5;
+  }
+  .close:hover {
+    opacity: 1;
+  }
+  .close:before, .close:after {
+    position: absolute;
+    left: 15px;
+    content: ' ';
+    height: 20px;
+    width: 2px;
+    background-color: #333;
+  }
+  .close:before {
+    transform: rotate(45deg);
+  }
+  .close:after {
+    transform: rotate(-45deg);
+  }
