handle new task form submit extracts form input

--- a/src/style.css
+++ b/src/style.css
@@ -133,7 +133,7 @@ h3 {
     justify-content: center;
 }
 
-#taskForm {
+#taskFormBox {
     background-color: aliceblue;
     border-radius: 3px;
 
