--- a/src/style.css
+++ b/src/style.css
@@ -10,10 +10,6 @@
     --font-col: grey;
 }
 
-/* .material-icons-outlined {
-
-} */
-
 #content {
     height: 100vh;
 
@@ -41,6 +37,7 @@ header h1 {
 
 main {
     display: flex;
+    width: 100%;
     
     /* border: 1px red solid; */
     flex: 9;
@@ -144,6 +141,7 @@ h3 {
 /* TASKS SECTION */
 #taskViewer {
     padding: 20px 30px;
+    width: 100%;
 }
 
 #taskViewer h2 {
@@ -164,8 +162,11 @@ h3 {
     margin: 5px 0;
 }
 
+/* Tasks */
 #taskViewer li {
     display: flex;
+    box-sizing: border-box;
+    width: 100%;
     
     align-items: center;
     list-style: none;
@@ -187,28 +188,26 @@ h3 {
 
 #taskViewer li label {
     display: flex;
-    align-items: center;
-    flex: 1;
-    /* justify-content: space-between; */
+    align-items: baseline;
+    width: 100%;
     
     cursor: pointer;
 }
 
 li label span {
-    /* border: solid red 1px; */
-    /* width: 100%; */
+    overflow: hidden;
+    height: 1em;
     font-size: 20px;
+    margin-right: 8px;
 }
 
 .taskEntryName {
-    /* width: 30%; */
-    flex: 2;
+    width: 40%;
 }
 
 .taskEntryDescription {
-    font-size: 1rem;
-    /* width: 60%; */
-    flex: 3;
+    font-size: 13px;
+    width: 45%;
     /* background-color: red; */
     color: grey;
     overflow: hidden;
@@ -216,8 +215,9 @@ li label span {
 }
 
 .taskEntryDueDate {
-    /* width: 10%; */
-    flex: 1;
+    font-size: 13px;
+    color: grey;
+    width: 18%;
 }
 
 .priority1 {
@@ -283,6 +283,7 @@ li label span {
 .newFilterPopUp {
     background-color: aliceblue;
     border-radius: 3px;
+    box-shadow: 1px 1px 50px 2px;
 
     padding: 10px;
 }
